# similar-wallets

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  werf-giterminism.yaml  werf.yaml
.helm/: Chart.yaml  values.yaml
app/: main.py
